Fixed Background color of tags that were unvisible (Bugfix: 1077)

--- a/less/content/content.less
+++ b/less/content/content.less
@@ -44,3 +44,14 @@ table.calmini {
 div.ilNewObjectSelector{
   padding-right: 0;
 }
+
+//Blog Keyword / Tags
+a.ilTag {
+  background-color: @il-highlight-bg;
+  color: @link-color;
+}
+
+a.ilTag:hover {
+  background-color: darken(@il-highlight-bg, 10%);
+  color: @link-color;
+}
