--- a/unibe52.css
+++ b/unibe52.css
@@ -7365,12 +7365,12 @@ div.ilBox {
 }
 /* Top-Bar */
 div.ilTopBar {
-  background-color: #444;
-  color: white;
+  background-color: #444444;
+  color: #ffffff;
   padding: 5px 10px;
 }
 div.ilTopBar a {
-  color: white;
+  color: #ffffff;
 }
 div.ilTopBarLeft {
   float: left;
@@ -8596,6 +8596,20 @@ a.ilCOPageSection {
 #ilAdvSelListAnchorText_char_style_selection > span {
   min-width: auto;
 }
+div.ilc_answers.answer-table div.ilc_qanswer_Answer {
+  display: table-row;
+}
+div.ilc_answers.answer-table div.ilc_qanswer_Answer > div {
+  display: table-cell;
+}
+div.ilc_question_SingleChoice .answertext > p,
+div.ilc_question_MultipleChoice .answertext > p {
+  margin: 0 !important;
+}
+div.ilc_question_SingleChoice .ilc_qanswer_Answer > div:first-child,
+div.ilc_question_MultipleChoice .ilc_qanswer_Answer > div:first-child {
+  padding-right: 10px;
+}
 /* Services/Calendar */
 td.even {
   color: #222;
@@ -8648,19 +8662,20 @@ ul.ilCalSel li {
   border-bottom: 1px solid #f0f0f0;
   min-height: 25px;
 }
-span.ilCalColSpan {
-  padding: 2px 0;
-  display: block;
-  margin-left: -48px;
-  width: 24px;
-  height: 25px;
-  float: left;
-}
 ul.ilCalSel li img {
   margin-top: 6px;
   display: block;
   float: left;
   margin-left: -20px;
+}
+span.ilCalColSpan {
+  float: left;
+  display: inline-block;
+  width: 24px;
+  height: 25px;
+  margin-left: -48px;
+  padding: 2px 0;
+  text-align: center;
 }
 div.ilCalSelTitle {
   padding: 5px 3px 3px;
@@ -11454,7 +11469,7 @@ div.ilPCMyCoursesPath {
   width: 100%;
 }
 .ilAwarenessDropDown .media-left {
-  width: 45px;
+  width: 55px;
 }
 .ilAwarenessDropDown .media-body {
   /* background-image: url('./templates/default/images/scorm/not_attempted.svg'); */
@@ -12554,6 +12569,12 @@ table.mceToolbar td {
   }
   [dir="rtl"] #ilTopNav .navbar-nav {
     margin-right: 0;
+    padding-right: 0;
+  }
+  [dir="rtl"] #ilTopNav .navbar-nav > li > a {
+    float: right;
+    width: 100%;
+    margin: 0;
   }
   [dir="rtl"] #ilTopNav button.navbar-toggle {
     left: auto;
@@ -12897,6 +12918,14 @@ table.calmini td.calminitoday {
 }
 div.ilNewObjectSelector {
   padding-right: 0;
+}
+a.ilTag {
+  background-color: #d9e6f4;
+  color: #4e7aa9;
+}
+a.ilTag:hover {
+  background-color: #b1cce9;
+  color: #4e7aa9;
 }
 .alert-success {
   background-color: #c4e074;
